--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
   max-width: 960px;
   margin: 0 auto;
   clear: both;
+  position: relative;
 }
 
 h1,
@@ -53,7 +54,7 @@ h3 {
 /* header */
 
 #masthead {
-  position: fixed;
+  position: absolute;
   z-index: 99;
   width: 100%;
   margin: 0 0 30px;
@@ -122,6 +123,7 @@ h3, h2 {
 #main-container {
   padding-top: 130px;
   min-height: calc(100vh - 70px);
+ 
 }
 
 .main-section {
@@ -138,23 +140,39 @@ h3, h2 {
 
 .work {
   position: relative;
-  float: left;
+  float: none;
   width: 274px;
   margin: 20px 0 25px;
   overflow: auto;
 }
 
-.work:nth-child(even) {
-  margin-right: 40px;
+.work:nth-child(odd) {
+  margin-right: 60px;
 }
 
 .work img {
   width: 100%;
   border: 0 none;
   opacity: 0.8;
+
 }
 
+
 .work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.rock h3 {
   position: absolute;
   bottom: 20px;
   width: 100%;
